syntax = "proto3";

package auth;

message CreateUserDto {
    string email = 1;
}
message User {
    string Id = 1;
    string email = 2;
    string createdAt = 3;
    string lastVisit = 4;
    repeated string UrlIds = 5;
}
message Users {
    repeated User users = 1;
}
message FindOneUserDto{
    string email = 1;
}
message DeleteUserDto{
    string Id = 1;
}
message UpdateUserDto{
    string Id = 1;
    string email = 2;
    string lastVisit = 3;
    repeated string UrlIds = 4;
}
message PaginationDto {
    int32 page = 1;
    int32 skip = 2;
}
message Empty{}

service UserService {
    rpc CreateUser(CreateUserDto) returns (User) {};
    rpc FindAllUsers(Empty) returns (Users) {};
    rpc FindOneUser(FindOneUserDto) returns (User) {};
    rpc UpdateUser(UpdateUserDto) returns (User) {};
    rpc DeleteUser(DeleteUserDto) returns (User) {};
    rpc QueryUsers(stream PaginationDto) returns (stream Users) {};
}


